feat: Implement JavaFX 25 GUI for DeepSeek Chatbot
- Added App.java as the main entry point for the JavaFX application.
- Created Launcher.java to bootstrap the application from the classpath.
- Developed MainController.java to manage the chat interface and user interactions.
- Designed main.fxml layout for the GUI, including chat history, input area, and toggle buttons.
- Styled the application with app.css using AtlantaFX theme.
- Introduced run-gui.bat script to launch the GUI with JDK 25, addressing compatibility issues with Maven plugins.
- Updated README.md and javafx-gui-plan.md with instructions and project status.
- Completed Phase 1 of the GUI implementation with known issues documented for future phases.